--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="@font/dancing"
+            style="@style/Title"
             android:text="Horoscap"
-            android:textColor="@color/secondary"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            />
     </FrameLayout>
 
     <androidx.fragment.app.FragmentContainerView
