--- a/app/src/main/res/layout/activity_horoscope_detail.xml
+++ b/app/src/main/res/layout/activity_horoscope_detail.xml
@@ -56,6 +56,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"
+        android:id="@+id/pb"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
